# game_loop

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONVERSATION_THREADING_SUMMARY.md  DEMO_README.md  ENHANCED_INPUT_PROCESSOR_SUMMARY.md  Makefile  P0_Requirements_Gap_Analysis_Report.md  P1_Requirements_Gap_Analysis_Report.md  PLAYER_GUIDE.md  README.md  SEMANTIC_MEMORY_ROADMAP.md  apply_migration_035.sql  commit_30_implementation_plan.md  debug_ollama_client.py  demo_scenarios.py  demo_world_setup.py  docker-compose.yml  enhanced_caching_strategies.sql  fix_summary.md  incremental_statistics.sql  interactive_demo.py  optimized_cluster_views.sql  pyproject.toml  pytest.ini  quest_architecture_demo.py  quest_models_demo.py  quest_system_demo.py  run_game.sh  simple_demo_setup.py  simple_quest_demo.py  test_emotional_memory_final.py  test_emotional_memory_system_complete.py  test_enhanced_functionality.py  test_enhanced_input_integration.py  test_memory_algorithms_bdd.py  test_memory_integration_basic.py  test_memory_syntax_validation.py  test_ollama.py  test_ollama_simple.py  (+4 more)
.claude/agents/: requirements-ux-reviewer.md
.github/workflows/: ci.yml
bugs/object_systems/: bug_001_container_effects_keyerror.md  bug_002_container_metadata_missing.md  bug_003_crafting_session_validation.md  bug_004_crafting_session_keyerror.md
container/: Containerfile.postgres
docs/: architecture-diagram.mmd  game-loop.mmd  integration_guide.md  llm_prompts.md  tech-stack.md
docs/api/: search_api_reference.md
docs/database/: schema.md
docs/features/: semantic_search_overview.md
docs/guides/: search_integration_guide.md  search_performance_optimization.md  search_query_patterns.md  search_strategy_guide.md
docs/implementation/: OutputGenerator_Implementation_Summary.md  embedding_pipeline.md  entity_embedding_system.md  game_loop_implementation_plan.md  semantic_search_implementation_completion.md
exports/: requirements-diagram-2025-08-08-152512.mmd
features/: database_config.feature  game_flow.feature  game_rules_config.feature  ollama_config.feature
roadmap/: tasks-diagram-2025-08-07-112006.md
rules/: default_game_rules.yaml
rules/samples/: advanced_rules.yaml  basic_rules.yaml
scripts/: add_timestamp_columns.py  demo_auto_showcase.py  demo_conversation_threading.py  demo_location_generation.py  demo_npc_dialogue_comparison.py  demo_npc_generation.py  demo_object_generation.py  demo_phase2_features.py  demo_real_integration.py  demo_simple.py  demo_world_connections.py  manage_docker.py  simple_npc_demo.py  test_npc_dialogue.py
src/game_loop/: main.py
templates/: bug_report.md
templates/actions/: error.j2  success.j2
templates/connection_generation/: connection_prompts.j2  description_templates.j2  validation_templates.j2
templates/dialogue/: speech.j2
templates/location_generation/: location_prompts.j2  theme_templates.j2  validation_prompts.j2
templates/locations/: description.j2
templates/memory/: confidence_patterns.j2  examples.j2  personality_styles.j2  trust_revelation.j2
templates/messages/: error.j2  info.j2
(+426 files in other folders)
