[project]
name = "game-loop"
version = "0.1.0"
description = "A text adventure game with natural language processing capabilities"
authors = [
    {name = "Jeff Wikstrom"}
]
readme = "README.md"
requires-python = "^3.10"
dependencies = [
    "pydantic (>=2.11.3,<3.0.0)",
    "sqlalchemy[asyncio] (>=2.0.40,<3.0.0)",
    "pgvector (>=0.4.0,<0.5.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "rich (>=14.0.0,<15.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
black = "^25.1.0"
ruff = "^0.11.6"
mypy = "^1.15.0"
pre-commit = "^4.2.0"

# Define the entry point for the game_loop command
[tool.poetry.scripts]
game_loop = "game_loop.main:main"

# Configuration for development tools
[tool.black]
line-length = 88
target-version = ["py310"]

[tool.ruff]
line-length = 88
target-version = "py310"
select = ["E", "F", "I", "N", "W", "B", "C4", "UP"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

