[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "game-loop"
version = "0.1.0"
description = "A text adventure game with natural language processing capabilities"
authors = ["Jeff Wikstrom"]
readme = "README.md"
packages = [{include = "game_loop", from = "src"}]
include = ["src/game_loop/py.typed"]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
pydantic = ">=2.11.3,<3.0.0"
sqlalchemy = {version = ">=2.0.40,<3.0.0", extras = ["asyncio"]}
pgvector = ">=0.4.0,<0.5.0"
httpx = ">=0.28.1,<0.29.0"
rich = ">=14.0.0,<15.0.0"
asyncpg = ">=0.30.0,<0.31.0"
ollama = ">=0.4.8,<0.5.0"
jinja2 = "^3.1.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
black = "^25.1.0"
ruff = "^0.11.6"
mypy = "^1.15.0"
pre-commit = "^4.2.0"
pytest-cov = "^4.1.0"
pytest-asyncio = "^0.26.0"
types-pyyaml = "^6.0.12.20250402"

# Define the entry point for the game_loop command
[tool.poetry.scripts]
game_loop = "game_loop.main:main"

# Configuration for development tools
[tool.black]
line-length = 88
target-version = ["py310"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B", "C4", "UP"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
explicit_package_bases = true
mypy_path = "src"
namespace_packages = true

# Ignore missing stubs for external libraries
[[tool.mypy.overrides]]
module = [
    "pydantic.*",
    "rich.*",
    "sqlalchemy.*",
    "pgvector.*",
    "httpx.*",
    "ollama.*",
    "jinja2.*",
    "asyncpg.*"
]
ignore_missing_imports = true

# Pytest configuration
[tool.pytest.ini_options]
markers = [
    "integration: marks tests as integration tests",
    "asyncio: marks tests as async tests that require pytest-asyncio"
]
